--- a/core/locale/ja_JP/form.xml
+++ b/core/locale/ja_JP/form.xml
@@ -15,4 +15,5 @@
 	<label index="is_preferred">推奨候補</label>
 	<label index="dateselector.open">日付選択を開いて日付を選んでください</label>
 	<label index="autocompleteInfo">これはオートコンプリートのフィールドです。入力して候補を得てください</label>
+	<label index="legend.main">ロールの定義</label>
 </labels>
