--- a/core/locale/ja_JP/global.xml
+++ b/core/locale/ja_JP/global.xml
@@ -2,14 +2,15 @@
 <labels>
 	<label index="tab.todoyu.label">todoyu</label>
 	<label index="yes">はい</label>
+	<label index="ok">OK</label>
 	<label index="no">いいえ</label>
+	<label index="dismiss">却下</label>
 	<label index="loading">読込中</label>
 	<label index="expandall">全て展開</label>
 	<label index="author">作成者</label>
 	<label index="title">タイトル</label>
 	<label index="description">説明</label>
 	<label index="date">日付</label>
-	<label index="dateFormat">y.n.j</label>
 	<label index="quickcreate.title">作成</label>
 	<label index="quickcreate.alltypes.label">全てのデータ型:</label>
 	<label index="create">作成</label>
@@ -34,6 +35,7 @@
 	<label index="records">レコード</label>
 	<label index="components">コンポーネント</label>
 	<label index="status">ステータス</label>
+	<label index="locked">ロック</label>
 	<label index="what">何</label>
 	<label index="where">どこで</label>
 	<label index="when">いつ</label>
@@ -46,6 +48,7 @@
 	<label index="deadline">締切</label>
 	<label index="closeWindow">ウィンドウを閉じる</label>
 	<label index="noAccess.errorMessage">要求されたデータにアクセスできません</label>
+	<label index="notLoggedIn.errorMessage">ログインの期限が切れました。リクエストは完了しなかったので再度ログインしてください。</label>
 	<label index="close">閉じる</label>
 	<label index="noAccess.pageTitle">アクセスなし</label>
 	<label index="noAccess.goBackToLastPage">直前のページに戻る</label>
@@ -74,4 +77,22 @@
 	<label index="headlet.ajaxloader.label">データを Web サーバと同期</label>
 	<label index="headlet.about.label">todoyu について</label>
 	<label index="unknown">n/a</label>
+	<label index="loaderBox.title">まもなく始まります</label>
+	<label index="panelwidget.toggle">このウィジェットの開閉</label>
+	<label index="date_update">最終更新日</label>
+	<label index="date_create">作成日</label>
+	<label index="id_person_create">作成者</label>
+	<label index="of">の</label>
+	<label index="public">パブリック</label>
+	<label index="notpublic">非パブリック</label>
+	<label index="log.debug">デバッグ情報</label>
+	<label index="log.notice">警告</label>
+	<label index="log.error">一般的なエラー</label>
+	<label index="log.security">セキュリティの課題</label>
+	<label index="log.fatal">致命的なエラー</label>
+	<label index="wizard">ウィザード</label>
+	<label index="wizard.close">ウィザードを閉じる</label>
+	<label index="wizard.close.confirm">ウィザードを閉じますか？</label>
+	<label index="wizard.back">戻る</label>
+	<label index="wizard.next">次へ</label>
 </labels>
