--- a/core/locale/en_US/dateformat.xml
+++ b/core/locale/en_US/dateformat.xml
@@ -2,8 +2,8 @@
 <labels>
 	<label index="D2M2">%m/%d</label>
 	<label index="DlongD2Mlong">%A, %d/%B</label>
-	<label index="D2M2Y2">%d/%m/%y</label>
-	<label index="D2M2Y4">%d/%m/%Y</label>
+	<label index="D2M2Y2">%m/%d/%y</label>
+	<label index="D2M2Y4">%m/%d/%Y</label>
 	<label index="D2MshortY4">%b %d %y</label>
 	<label index="D2MshortY2">%b %d %Y</label>
 	<label index="D2Mshort">%b %d</label>
@@ -18,10 +18,10 @@
 	<label index="DshortD2MlongY4">%a, %B %d %Y</label>
 	<label index="DlongD2MlongY4">%A, %B %d %Y</label>
 	<label index="calendarweek">CW %W</label>
-	<label index="date">%d/%m/%Y</label>
+	<label index="date">%m/%d/%Y</label>
 	<label index="time">%H:%M</label>
 	<label index="timesec">%H:%M:%S</label>
-	<label index="datetime">%d/%m/%y %H:%M</label>
-	<label index="dShortDatetime">%a %d/%m/%y %H:%M</label>
+	<label index="datetime">%m/%d/%y %H:%M</label>
+	<label index="dShortDatetime">%a %m/%d/%y %H:%M</label>
 	<label index="day">%d</label>
 </labels>
