* Added error page for invalid requests

--- a/core/locale/de_DE/global.xml
+++ b/core/locale/de_DE/global.xml
@@ -100,4 +100,8 @@
 	<label index="log.error">Normale Fehler</label>
 	<label index="log.security">Security Issues</label>
 	<label index="log.fatal">Fatal Errors</label>
+	<label index="controllerError.oops">Hoppla!</label>
+	<label index="controllerError.info">todoyu kann diese Anfrage nicht verarbeiten</label>
+	<label index="controllerError.reason">Möglichweise haben Sie die URL falsche geschrieben oder die gewünschte Erweiterung wurde entfernt</label>
+	<label index="controllerError.goBack">Zurück zu todoyu</label>
 </labels>
