--- a/core/locale/en_GB/global.xml
+++ b/core/locale/en_GB/global.xml
@@ -100,4 +100,8 @@
 	<label index="log.error">Normal Errors</label>
 	<label index="log.security">Security Issues</label>
 	<label index="log.fatal">Fatal Errors</label>
+	<label index="controllerError.oops">Oops!</label>
+	<label index="controllerError.info">todoyu can't handle this request</label>
+	<label index="controllerError.reason">Maybe you misstyped the URL or the requested extension has been removed</label>
+	<label index="controllerError.goBack">Go back to todoyu</label>
 </labels>
