* Added russian translation

--- a/core/locale/ru_RU/date.xml
+++ b/core/locale/ru_RU/date.xml
@@ -50,4 +50,5 @@
 	<label index="monthly">Ежемесячно</label>
 	<label index="yearly">Каждый год</label>
 	<label index="today">Сегодня</label>
+	<label index="warning.dateformat.invalid">Обнаружена неправильная дата (будет изменена при сохранении).</label>
 </labels>
