--- a/core/locale/ru_RU/dateformat.xml
+++ b/core/locale/ru_RU/dateformat.xml
@@ -8,10 +8,11 @@
 	<label index="D2MshortY2">%d %b %y</label>
 	<label index="D2Mshort">%d %b</label>
 	<label index="D2MshortTime">%d %b %H:%M</label>
+	<label index="dShort">%a</label>
 	<label index="DshortD2M2">%a %d.%m.</label>
 	<label index="D2MlongY4">%d %B %Y</label>
-	<label index="Mlong">%B</label>
 	<label index="MlongD2">%d %B</label>
+	<label index="Mlong">%B</label>
 	<label index="MlongY4">%B %Y</label>
 	<label index="DshortD2MshortY2">%a, %d %b %y</label>
 	<label index="DshortD2MlongY4">%a, %d %B %Y</label>
