--- a/core/locale/ru_RU/global.xml
+++ b/core/locale/ru_RU/global.xml
@@ -2,7 +2,9 @@
 <labels>
 	<label index="tab.todoyu.label">todoyu</label>
 	<label index="yes">Да</label>
+	<label index="ok">Ок</label>
 	<label index="no">Нет</label>
+	<label index="dismiss">Закрыть</label>
 	<label index="loading">Загружаю</label>
 	<label index="expandall">Открыть все</label>
 	<label index="author">Автор</label>
@@ -33,6 +35,7 @@
 	<label index="records">Записи</label>
 	<label index="components">Компоненты</label>
 	<label index="status">Статус</label>
+	<label index="locked">Заблокировано</label>
 	<label index="what">Что</label>
 	<label index="where">Где</label>
 	<label index="when">Когда</label>
@@ -45,6 +48,7 @@
 	<label index="deadline">Срок</label>
 	<label index="closeWindow">Закрыть окно</label>
 	<label index="noAccess.errorMessage">У вас нет доступа к запрошенным данным</label>
+	<label index="notLoggedIn.errorMessage">Мы не смогли выполнить ваш запрос, потому что ваша сессия истекла. Пожалуйста, зайдите в систему снова.</label>
 	<label index="close">Закрыть</label>
 	<label index="noAccess.pageTitle">Нет доступа</label>
 	<label index="noAccess.goBackToLastPage">Вернуться на предыдущую страницу</label>
@@ -73,4 +77,21 @@
 	<label index="headlet.ajaxloader.label">Синхронизируем данные с сервером</label>
 	<label index="headlet.about.label">О todoyu</label>
 	<label index="unknown">неизвестно</label>
+	<label index="loaderBox.title">Подождите немного</label>
+	<label index="panelwidget.toggle">Открыть/закрыть этот видгет</label>
+	<label index="date_update">Дата последнего обновления</label>
+	<label index="date_create">Дата создания</label>
+	<label index="id_person_create">Создано</label>
+	<label index="public">Публичный</label>
+	<label index="notpublic">Непубличный</label>
+	<label index="log.debug">Отладочная информация</label>
+	<label index="log.notice">Сообщения</label>
+	<label index="log.error">Простые ошибки</label>
+	<label index="log.security">Проблемы с безопастностью</label>
+	<label index="log.fatal">Критические ошибки</label>
+	<label index="wizard">Мастер</label>
+	<label index="wizard.close">Закрыть Мастер</label>
+	<label index="wizard.close.confirm">Вы уверены, что хотите закрыть Мастер?</label>
+	<label index="wizard.back">Вернуться</label>
+	<label index="wizard.next">Продолжить</label>
 </labels>
