--- a/core/locale/de_DE/form.xml
+++ b/core/locale/de_DE/form.xml
@@ -16,4 +16,12 @@
 	<label index="dateselector.open">Öffne Kalender um ein Datum auszuwählen</label>
 	<label index="autocompleteInfo">Dieses Feld wird automatisch vervollständigt. Fangen Sie an zu schreiben um die Vorschläge zu sehen</label>
 	<label index="legend.main">Rollendefinition</label>
+    <label index="daterange.choose">Wählen Sie einen Zeitabschnitt</label>
+    <label index="daterange.monthToDate">Aktueller Monat</label>
+	<label index="daterange.yearToDate">Aktuelles Jahr</label>
+	<label index="daterange.quarterToDate">Aktuelles Quartal</label>
+	<label index="daterange.previousMonth">Vorangehender Monat</label>
+	<label index="daterange.previousQuarter">Vorangehendes Quartal</label>
+	<label index="daterange.previousYear">Vorangehendes Jahr</label>
+	<label index="daterange.fullTimeRange">Gesamte Zeitspanne</label>
 </labels>
