--- a/lib/js/tiny_mce/changelog.txt
+++ b/lib/js/tiny_mce/changelog.txt
@@ -1,3 +1,43 @@
+Version 3.4.3 (2011-06-09)
+	Fixed bug where deleting backwards before an image into a list would put the cursor in the wrong location.
+	Fixed bug where styles plugin would not apply styles across multiple selected block elements correctly.
+	Fixed bug where cursor would jump to start of document when selection contained empty table cells in IE8.
+	Fixed bug where applied styles wouldn't be kept if you pressed enter twice to produce two paragraphs.
+	Fixed bug where a ghost like caret would appear on Gecko when pressing enter while having a text color applied.
+	Fixed bug where IE would produce absolute urls if you inserted a image/link and reloaded the page.
+	Fixed bug where applying a heading style to a list item would cascade style to children list items.
+	Fixed bug where Editor loses focus when backspacing and changing styles in WebKit.
+	Fixed bug where exception was thrown in tinymce.util.URI when parsing a relative URI and no base_uri setting was provided.
+	Fixed bug where alt-f10 was not always giving focus to the toolbar on Safari.
+	Added new 'allow_html_in_named_anchor' option to allow html to occur within a named anchor tag.  Use at own risk.
+	Added plugin dependency support.  Will autoload plugins specified as a dependency if they haven't been loaded.
+	Fixed bug where the autolink plugin didn't work with non-English keyboards when pressing ).
+	Added possibility to change properties of all table cells in a column.
+	Added external_image_list option to get images list from user-defined variable or function.
+	Fixed bug where the autoresize plugin wouldn't reduce the editors height on Chrome.
+	Fixed bug where table size inputs were to small for values with size units.
+	Fixed bug where table cell/row size input values were not validated.
+	Fixed bug where menu item line-height would be set to wrong value by external styles.
+	Fixed bug where hasUndo() would return wrong answer.
+	Fixed bug where page title would be set to undefined by fullpage plugin.
+	Fixed bug where HTML5 video properties were not updated in embedded media settings.
+	Fixed bug where HTML comment on the first line would cause an error.
+	Fixed bug where spellchecker menu was positioned incorrectly on IE.
+	Fixed bug where breaking out of list elements on WebKit would produce a DIV instead of P after the list.
+	Fixed bug where pasting from Word in IE9 would add extra BR elements when text was word wrapped.
+	Fixed bug where numeric entities with leading zeros would produce incorrect decoding.
+	Fixed bug where hexadecimal entities wasn't properly decoded.
+	Fixed bug where bookmarks wasn't properly stored/restored on undo/redo.
+	Fixed bug where the mceInsertCommand didn't retain the values of links if they contained non url contents.
+	Fixed bug where the valid_styles option wouldn't be properly used on styles for specific elements.
+	Fixed so contentEditable is used for the body of the editor if it's supported.
+	Fixed so trailing BR elements gets removed even when forced_root_blocks option was set to false/null.
+	Fixed performance issue with mceInsertCommand and inserting very simple contents.
+	Fixed performance issue with older IE version and huge documents by optimizing the forced root blocks logic.
+	Fixed performance issue with table plugin where it checked for selected cells to often.
+	Fixed bug where creating a link on centered/floated image would produce an error on WebKit browsers.
+	Fixed bug where Gecko would remove single paragraphs if there where contents before/after it.
+	Fixed bug where the scrollbar would move up/down when pasting contents using the paste plugin.
 Version 3.4.2 (2011-04-07)
 	Added new 'paste_text_sticky_default' option to paste plugin, enables you to set the default state for paste as plain text.
 	Added new autoresize_bottom_margin option to autoresize plugin that enables you to add an extra margin at the bottom. Patch contributed by Andrew Ozz.
