--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -2,6 +2,7 @@ todoyu core changelog
 
 core 2.1.1
 	* Change: Only set curl option CURLOPT_FOLLOWLOCATION when safe mode is not enabled
+	* Bugfix: Parsing dates in british english format failed (was interpreted as american)
 
 core 2.1.0
 	1. Note: Since release 2.1.0, the todoyu extension repository is enabling us to decouple version updates of the todoyu core and basic extensions from one another.
