* Updated core ChangeLog

--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,10 +1,17 @@
 todoyu core changelog
 
-core 2.1.1
-	* Change: Only set curl option CURLOPT_FOLLOWLOCATION when safe mode is not enabled
+core 2.1.1 - ???
+	* Bugfix: Added more tags to the badHtmlTags list to make sure they are escaped and not rendered (ex: embed)
 	* Bugfix: Parsing dates in british english format failed (was interpreted as american)
+	* Bugfix: List of available locales contained default locale twice
+	* Changed: Only set curl option CURLOPT_FOLLOWLOCATION when safe mode is not enabled
+	* Changed: Minimum php version is 5.2.3 (instead only 5.2.0)
+	* Changed: Updated highcharts library to 2.1.6
+	* Changed: Updated tinyMCE to 3.4.3.2
+	* Changed: A tags are now removed from RTE when saving (autolink function rebuilds them when necessary for output)
 
-core 2.1.0
+
+core 2.1.0 - 2011-06-17
 	1. Note: Since release 2.1.0, the todoyu extension repository is enabling us to decouple version updates of the todoyu core and basic extensions from one another.
 	Respectively, the core and extensions changelogs are now maintained separately.
 	2. Upgrade instruction: When upgrading an existing todoyu installation to 2.1.0 please read the instructions in the file __UPGRADE_TODOYU___READ_THIS_FIRST.txt
@@ -49,7 +56,6 @@ core 2.1.0
 	* Added: Todoyu.Helper.cropText() to crop text in js
 	* Added: addJsOnloadedFunction has now an autobind parameter
 	* Translation: Updated german, russian and japanese translation updates
-
 
 
 core 2.0.8 - beta
