--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -5,6 +5,7 @@ core 2.1.1 - ???
 	* Bugfix: Parsing dates in british english format failed (was interpreted as american)
 	* Bugfix: List of available locales contained default locale twice
 	* Bugfix: Timerange date selector had to high z-index
+	* Bugfix: Detect also links in this format: "mailto:name@domain.com"
 	* Changed: Padding of inline filter forms to prevent layout problems
 	* Changed: Only set curl option CURLOPT_FOLLOWLOCATION when safe mode is not enabled
 	* Changed: Minimum php version is 5.2.3 (instead only 5.2.0)
