--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,6 +1,6 @@
 todoyu core changelog
 
-core 2.1.1 - ???
+core 2.1.1 - 2011-07-25
 	* Bugfix: Installer- Fixed icon display bug of installer steps with long labels
 	* Feature: Added optional event identifier to error/success notifications- notifications of the same event are now closing preceding notes of the same event (if present)
 	* Bugfix: open duration picker wasn't hidden when closing parent dialog
