--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -4,6 +4,7 @@ core 2.1.2 - ???
 	* Change: TodoyuTime::parseDateString has now a fallback to strtotime() if date was not recognized before
 	* Remove: Removed unused function TodoyuArray::convertToUTF8Array
 	* Change: Made TodoyuLabelManager::$cache private
+	* Change: Made TodoyuLabelManger::getFallbackLocales private
 	* Add: Added doubleEncode parameter for TodoyuString::htmlentities
 	
 
