--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -10,6 +10,7 @@ core 2.1.2 - ???
 	* Change: Comment out unused database relation input field (relations have their own sub fields)
 	* Add: Added doubleEncode parameter for TodoyuString::htmlentities
 	* Remove: Removed unused function TodoyuArray::convertToUTF8Array
+	* Update: JsCalendar library updated. Added some extra utf-8 language packages (provided by Captain_FLAM)
 
 	
 
