--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -13,6 +13,7 @@ core 2.1.2 - ???
 	* Change: Cleanup adding the language file for jscalendar
 	* Add: Added doubleEncode parameter for TodoyuString::htmlentities
 	* Add: Translated log levels in core/locale/en_GB/global.xml
+	* Add: Caching for class autoloader
 	* Remove: Removed unused function TodoyuArray::convertToUTF8Array
 	* Update: JsCalendar library updated. Added some extra utf-8 language packages (provided by Captain_FLAM)
 	* Update: tinyMCE 3.4.4
