--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -11,6 +11,7 @@ core 2.1.2 - ???
 	* Change: Made TodoyuLabelManger::getFallbackLocales private
 	* Change: Comment out unused database relation input field (relations have their own sub fields)
 	* Change: Cleanup adding the language file for jscalendar
+	* Change: Set default dummy timezone to prevent problems with date() before setting the users timezone
 	* Add: Added doubleEncode parameter for TodoyuString::htmlentities
 	* Add: Translated log levels in core/locale/en_GB/global.xml
 	* Add: Caching for class autoloader
