* Applied changes submitted by Captain_FLAM * Bugfix: Option class name was not used (invalid variable name in template) * Change: Simplified TodoyuForm::injectFieldset (by Captain_FLAM) * Add: Confirm removal of sub record in db relation in form

--- a/core/locale/de_DE/form.xml
+++ b/core/locale/de_DE/form.xml
@@ -8,6 +8,7 @@
 	<label index="records.add">Datensatz anfügen</label>
 	<label index="records.remove">Datensatz entfernen</label>
 	<label index="records.edit">Datensatz bearbeiten</label>
+	<label index="records.removeconfirm">Sind Sie sicher, dass Sie diesen Datensatz entfernen wollen?</label>
 	<label index="databaserelation.nolabel">[Neuer Eintrag]</label>
 	<label index="databaserelation.expandAllRecords">Details anzeigen</label>
 	<label index="error.notUnique">Dieser Eintrag existiert bereits</label>
