--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -2,12 +2,12 @@ todoyu core changelog
 
 core 2.1.2 - ???
 	* Bugfix: #123 Text form fields are ignoring defined default values
-
 	* Bugfix: #185 Deleting an access role in sysmanager caused a fatal error (invalid function call)
 	* Bugfix: #189 Problems with character set conversion when server character sets are not utf-8
 	* Bugfix: Problems with close handling for popups in IE8. Redesigned callback structure
 	* Bugfix: #199 Parsing mysql date (standard date YYYY-MM-DD) failed. Birthdays were not received correct from form field
 	* Bugfix: Option class name was not used (invalid variable name in template)
+	* Bugfix: Remove event handler attributes from tags in RTE HTML to prevent RSS attacks
 	* Change: TodoyuTime::parseDateString has now a fallback to strtotime() if date was not recognized before
 	* Change: Made TodoyuLabelManager::$cache private
 	* Change: Made TodoyuLabelManger::getFallbackLocales private
