--- a/core/locale/en_GB/global.xml
+++ b/core/locale/en_GB/global.xml
@@ -22,6 +22,7 @@
 	<label index="delete">Delete</label>
 	<label index="deleteRecord">Delete Record</label>
 	<label index="show">Show</label>
+	<label index="showDetails">Show Details</label>
 	<label index="hide">Hide</label>
 	<label index="unhide">Unhide</label>
 	<label index="rename">Rename</label>
