--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,7 +1,7 @@
 todoyu core changelog
 
 core 2.1.2 - not released yet
-	* Bugfix: (chrome) save button icon was cut-off by 1 pixel on the left
+	* Bugfix: fixed various button icons positions for Chrome
 	* Bugfix: #123 Text form fields are ignoring defined default values
 	* Bugfix: #185 Deleting an access role in sysmanager caused a fatal error (invalid function call)
 	* Bugfix: #189 Problems with character set conversion when server character sets are not utf-8
