* Bugfix: labels of dynamic tabs float over bounding box of the tab in chrom (ex: view/edit event)

--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,6 +1,7 @@
 todoyu core changelog
 
 core 2.1.2 - not released yet
+	* Bugfix: labels of dynamic tabs float over bounding box of the tab in chrome (ex: view/edit event)
 	* Bugfix: fixed various button icons positions for Chrome
 	* Bugfix: #123 Text form fields are ignoring defined default values
 	* Bugfix: #185 Deleting an access role in sysmanager caused a fatal error (invalid function call)
