--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,6 +1,7 @@
 todoyu core changelog
 
-core 2.1.2 - not released yet
+core 2.1.2 - 2011-09-25
+	* Bugfix: Tab layout for chrome fixed
 	* Bugfix: labels of dynamic tabs float over bounding box of the tab in chrome (ex: view/edit event)
 	* Bugfix: fixed various button icons positions for Chrome
 	* Bugfix: #123 Text form fields are ignoring defined default values
@@ -10,30 +11,31 @@ core 2.1.2 - not released yet
 	* Bugfix: #199 Parsing mysql date (standard date YYYY-MM-DD) failed. Birthdays were not received correct from form field
 	* Bugfix: Option class name was not used (invalid variable name in template)
 	* Bugfix: Remove event handler attributes from tags in RTE HTML to prevent RSS attacks
-	* Change: TodoyuTime::parseDateString has now a fallback to strtotime() if date was not recognized before
-	* Change: Made TodoyuLabelManager::$cache private
-	* Change: Made TodoyuLabelManger::getFallbackLocales private
-	* Change: Comment out unused database relation input field (relations have their own sub fields)
-	* Change: Cleanup adding the language file for jscalendar
-	* Change: Set default dummy timezone to prevent problems with date() before setting the users timezone
-	* Change: Allow installation in not empty database (as long as no conflicts with existing tables occurs)
-	* Change: Simplified TodoyuForm::injectFieldset (by Captain_FLAM)
-	* Change: Load the override config before init (CaptainFLAM)
-	* Change: Always return the label (or the key) for a label (never empty)
-	* Change: Cleanup hook manager. Hooks are now case insensitive and stored internally (Todoyu::$CONFIG['HOOKS'] is deprecated now)
-	* Add: Added doubleEncode parameter for TodoyuString::htmlentities
-	* Add: Translated log levels in core/locale/en_GB/global.xml
-	* Add: Caching for class autoloader
-	* Add: Custom callback on empty result for searchlist panel widget
-	* Add: TodoyuMail::setCurrentUserAsSender() as a shortcut
-	* Add: Confirm removal of sub record in db relation in form
-	* Add: Allow to hook in into the form display event in javascript
-	* Add: Hook core.login on successful login
-	* Add: Hooks core.record.add, core.record.update, core.record.delete
-	* Add: Added getRowCount() method to TodoyuDatabase
+	* Bugfix: Select AC value with return key doesn't clear the hidden value field (previously selected items had got lost)
+	* Changed: TodoyuTime::parseDateString has now a fallback to strtotime() if date was not recognized before
+	* Changed: Made TodoyuLabelManager::$cache private
+	* Changed: Made TodoyuLabelManger::getFallbackLocales private
+	* Changed: Comment out unused database relation input field (relations have their own sub fields)
+	* Changed: Cleanup adding the language file for jscalendar
+	* Changed: Set default dummy timezone to prevent problems with date() before setting the users timezone
+	* Changed: Allow installation in not empty database (as long as no conflicts with existing tables occurs)
+	* Changed: Simplified TodoyuForm::injectFieldset (by Captain_FLAM)
+	* Changed: Load the override config before init (CaptainFLAM)
+	* Changed: Always return the label (or the key) for a label (never empty)
+	* Changed: Cleanup hook manager. Hooks are now case insensitive and stored internally (Todoyu::$CONFIG['HOOKS'] is deprecated now)
+	* Added: Added doubleEncode parameter for TodoyuString::htmlentities
+	* Added: Translated log levels in core/locale/en_GB/global.xml
+	* Added: Caching for class autoloader
+	* Added: Custom callback on empty result for searchlist panel widget
+	* Added: TodoyuMail::setCurrentUserAsSender() as a shortcut
+	* Added: Confirm removal of sub record in db relation in form
+	* Added: Allow to hook in into the form display event in javascript
+	* Added: Hook core.login on successful login
+	* Added: Hooks core.record.add, core.record.update, core.record.delete
+	* Added: Added getRowCount() method to TodoyuDatabase
 	* Remove: Removed unused function TodoyuArray::convertToUTF8Array
-	* Update: JsCalendar library updated. Added some extra utf-8 language packages (provided by Captain_FLAM)
-	* Update: tinyMCE 3.4.4
+	* Updated: JsCalendar library updated. Added some extra utf-8 language packages (provided by Captain_FLAM)
+	* Updated: tinyMCE 3.4.4
 
 	
 
