--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -5,6 +5,7 @@ core 2.2.0 - not released yet
 	* Added TodoyuTime::time() to set null values to current time
 	* Added TodoyuDateRange
 	* Added TodoyuArray::createMap()
+	
 
 core 2.1.3 - not released yet
 	* Added: action dispatcher error output contains now also action controller class name
@@ -15,6 +16,7 @@ core 2.1.3 - not released yet
 	* Removed: Username list from debug function. Were never used
 	* Translation: Added polish translation for core
 	* Translation: Serbian translation for installer
+	* Translation: Polish for core (and all basic extensions)
 
 
 core 2.1.2 - 2011-09-15
