--- a/core/locale/pl_PL/global.xml
+++ b/core/locale/pl_PL/global.xml
@@ -1,41 +1,41 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <labels>
 	<label index="tab.todoyu.label">todoyu</label>
 	<label index="yes">Tak</label>
 	<label index="ok">Ok</label>
 	<label index="no">Nie</label>
-	<label index="dismiss">Odwołać</label>
-	<label index="loading">Ładować</label>
+	<label index="dismiss">Odwołaj</label>
+	<label index="loading">Ładowanie</label>
 	<label index="expandall">Rozwiń Wszystko</label>
 	<label index="author">Autor</label>
 	<label index="title">Tytuł</label>
 	<label index="description">Opis</label>
 	<label index="date">Data</label>
 	<label index="quickcreate.title">Utwórz</label>
-	<label index="quickcreate.alltypes.label">Wszystkie typy danych:</label>
+	<label index="quickcreate.alltypes.label">Wszystkie Typy Danych:</label>
 	<label index="create">Utwórz</label>
 	<label index="createNew">Utwórz Nowy</label>
 	<label index="edit">Edytuj</label>
 	<label index="load">Załaduj</label>
 	<label index="save">Zapisz</label>
-	<label index="cancel">Kasuj</label>
+	<label index="cancel">Anuluj</label>
 	<label index="delete">Usuń</label>
-	<label index="deleteRecord">Usuń rekord</label>
-	<label index="show">Pokaż</label>
-	<label index="showDetails">Pokaż szczegóły</label>
+	<label index="deleteRecord">Usuń Record</label>
+	<label index="show">Pokarz</label>
+	<label index="showDetails">Pokaż Detale</label>
 	<label index="hide">Ukryj</label>
-	<label index="unhide">Pokaż Ukryte</label>
+	<label index="unhide">Odkryj</label>
 	<label index="rename">Zmień nazwę</label>
-	<label index="reset">Resetuj</label>
-	<label index="update">Uaktualnij</label>
+	<label index="reset">Reset</label>
+	<label index="update">Update</label>
 	<label index="search">Szukaj</label>
 	<label index="back">Wróć</label>
 	<label index="version">Wersja</label>
 	<label index="filter">Filtr</label>
-	<label index="type">Type</label>
-	<label index="record">Rekord</label>
+	<label index="type">Typ</label>
+	<label index="record">Record</label>
 	<label index="records">Rekordy</label>
-	<label index="components">Elementy</label>
+	<label index="components">Komponenty</label>
 	<label index="status">Status</label>
 	<label index="locked">Zablokowany</label>
 	<label index="what">Co</label>
@@ -47,58 +47,58 @@
 	<label index="stop">Stop</label>
 	<label index="end">Koniec</label>
 	<label index="beginning">Początek</label>
-	<label index="deadline">Ostateczny Termin</label>
+	<label index="deadline">Deadline</label>
 	<label index="closeWindow">Zamknij okno</label>
-	<label index="noAccess.errorMessage">Nie masz dostępu do tych danych</label>
-	<label index="notLoggedIn.errorMessage">Twója sesja wygasła. Zapytanie nie może być wykonane. Ponów logowanie.</label>
+	<label index="noAccess.errorMessage">Nie masz dostępu do żądanych danych</label>
+	<label index="notLoggedIn.errorMessage">Twój login wygasł. Żadanie nie może zostać zrealizowane. Proszę zaloguj się ponownie.</label>
 	<label index="close">Zamknij</label>
 	<label index="noAccess.pageTitle">Brak dostępu</label>
-	<label index="noAccess.goBackToLastPage">Wróć Do Poprzedniej Strony</label>
-	<label index="noAccess.contactAdmin">Ups! Jeśli wydaje Ci się, że powinieneś mieć dostęp do tych danych skontaktuj się ze swoim administratorem todoyu:</label>
+	<label index="noAccess.goBackToLastPage">Wróć do ostatniej strony</label>
+	<label index="noAccess.contactAdmin">Ups! Jeśli uważasz, że powinieneś mieć dostęp, zgłoś to do administratora ToDoYu:</label>
 	<label index="noAccess.requestURL">Żądany URL</label>
-	<label index="noAccess.missingRight">Brak uprawnień</label>
+	<label index="noAccess.missingRight">Brakujące Prawa</label>
 	<label index="footer.version">Wersja</label>
-	<label index="footer.bugreport">Zgłoś błąd</label>
-	<label index="footer.bugreport.title">Użyj BugReport todoyu na bugs.todoyu.com, żeby zgłosić błąd.</label>
-	<label index="footer.forum">Przedyskutuj to na forum</label>
-	<label index="footer.forum.title">Znajdź pomoc lub podziel się swoimi pomysłami</label>
-	<label index="footer.usermanual">Podręcznik</label>
-	<label index="footer.usermanual.title">Podręcznik użytkownika</label>
+	<label index="footer.bugreport">Zgłoś Problem</label>
+	<label index="footer.bugreport.title">Użyj narzędzia ToDoYu do śledzenia błędów bugs.todoyo.com, aby zgłosić błąd</label>
+	<label index="footer.forum">Przedyskutuj na forum</label>
+	<label index="footer.forum.title">Znajdź pomoc lub podziel się zwoimi pomysłami</label>
+	<label index="footer.usermanual">Instrukcja Obsługi</label>
+	<label index="footer.usermanual.title">Frontend Instrukcja Obsługi</label>
 	<label index="footer.api">API</label>
 	<label index="footer.api.title">Doxygen API Documentation</label>
 	<label index="footer.devmanual">Dev</label>
-	<label index="footer.devmanual.title">Podręcznik dla developerów i innych mądrali</label>
+	<label index="footer.devmanual.title">Instrukcja dla programistów i innych mądrych ludzi</label>
 	<label index="paging.page">Strona</label>
-	<label index="input.autocompleter">Automatycznie uzupełniane dane</label>
-	<label index="ajax.requestFailed">Nie można nawiązać połączenia z serwerem (połączenie lub serwer nie funkcjonuje prawidłowo?)</label>
+	<label index="input.autocompleter">Autocomplete Input</label>
+	<label index="ajax.requestFailed">Nie mogę połączyć się z serwerem (połączenie lub serwer nie działają?)</label>
 	<label index="attr.is_active">Aktywny</label>
 	<label index="roles">Role</label>
 	<label index="role">Rola</label>
-	<label index="role.new">Nowa rola</label>
-	<label index="role.attr.persons">Uczestnicy</label>
-	<label index="headlet.ajaxloader.label">Synchronizacja danych z serwerem</label>
+	<label index="role.new">Nowa Rola</label>
+	<label index="role.attr.persons">Członkowie Roli</label>
+	<label index="headlet.ajaxloader.label">Synchronizacja danych z serwerem web</label>
 	<label index="headlet.about.label">O todoyu</label>
 	<label index="unknown">b/d</label>
-	<label index="loaderBox.title">Kontynuacja nastąpi za chwilę</label>
+	<label index="loaderBox.title">Będzie kontynuowane za moment</label>
 	<label index="panelwidget.toggle">Otwórz/Zamknij Ten Widget</label>
 	<label index="date_update">Data ostatniej aktualizacji</label>
-	<label index="date_create">Data utworzenia</label>
+	<label index="date_create">Data Utworzenia</label>
 	<label index="id_person_create">Utworzone przez</label>
-	<label index="of">of</label>
+	<label index="of">z</label>
 	<label index="public">Publiczny</label>
-	<label index="notpublic">Nie publiczny</label>
+	<label index="notpublic">Niepubliczny</label>
 	<label index="wizard">Kreator</label>
-	<label index="wizard.close">Zamknij kreatora</label>
-	<label index="wizard.close.confirm">Czy jesteś pewień ?</label>
-	<label index="wizard.back">Powrót</label>
-	<label index="wizard.next">Kontynuj</label>
-	<label index="log.debug">Debug Information</label>
-	<label index="log.notice">Notices</label>
-	<label index="log.error">Normal Errors</label>
-	<label index="log.security">Security Issues</label>
-	<label index="log.fatal">Fatal Errors</label>
+	<label index="wizard.close">Zamknij kreator</label>
+	<label index="wizard.close.confirm">Jesteś pewien, że chcesz zamknąć Kreator?</label>
+	<label index="wizard.back">Wróć</label>
+	<label index="wizard.next">Kontunuuj</label>
+	<label index="log.debug">Sprawdź Informacje</label>
+	<label index="log.notice">Uwagi</label>
+	<label index="log.error">Normalne Błędy</label>
+	<label index="log.security">Kwestie bezpieczeństwa</label>
+	<label index="log.fatal">Błędy Krytyczne</label>
 	<label index="controllerError.oops">Oops!</label>
-	<label index="controllerError.info">todoyu nie może wykonać tego polecenia</label>
-	<label index="controllerError.reason">Maybe you misstyped the URL or the requested extension has been removed</label>
-	<label index="controllerError.goBack">Go back to todoyu</label>
+	<label index="controllerError.info">todoyu nie może sobie poradzić z tym żądaniem</label>
+	<label index="controllerError.reason">Być może źle wpisany adres URL o przedłużenie terminu został usunięty</label>
+	<label index="controllerError.goBack">Wróć do todoyu</label>
 </labels>
