* Changed: TodoyuString::html2text text handling improved

--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -4,6 +4,7 @@ core 2.1.4 - not released yet
 	* Bugfix: RTE auto focus failed. Added workaround to focus RTE if first field
 	* Changed: Only focus RTE when loaded over ajax
 	* Changed: TodoyuFormElement::getStorageData() is final now and checks always for noStorage and disabled
+	* Changed: TodoyuString::html2text text handling improved
 	* Added: TodoyuCountry::getIsoNumCurrency()
 	* Added: TodoyuFormElement::getStorageDataInternal() to override storageData properly
 	* Added: TodoyuDatabase::quoteTablename() (currently alias of quoteFieldName()). Cleanup quoteFieldName()
